fixed skip button function in jS. stored songs in array, iterated through array. play function works. css buttons aligned. project done pretty much

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,15 @@
 header {
     width: 100%;
-    height: 150px;
+    height: 75px;
+    background-color: #1C2833;
+    margin-bottom: 85px;
+    opacity:  0.5;
 }
 
 #mainheader {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Helvetica", sans-serif;
     color: white;
+    margin-bottom: 10px;
 }
 
 body {
@@ -17,22 +21,34 @@ img {
     width: 70px;
     height: 45px;
     margin: 20px 40px;
-    display: block;
+    display: fixed;
 }
 
 .button-obj {
-    margin-left: 200px;
-    padding-top: 1px;
+    margin-left: 215px;
+    padding-top: 6px;
     position: inline-block;
+    display: flex;
+
 }
 
-
+.playpause {
+    margin-left: 252px;
+    /*    padding: 1px;*/
+    position: inline-block;
+}
+li{
+    font-family: "Courier New", monospace;
+    font-size: 17px;
+}
 .clicklink {
     font-size: 17px;
     font-family: "Courier New", monospace;
     color: #6600CC;
 }
-
+a:hover{
+background-color: #F5B041;
+}
 .clicklink:hover {
     color: #00FF33;
     background-color: #660000;
@@ -43,10 +59,20 @@ img {
     color: #CCFFFF;
 }
 
-input.placeholder {
+:valid {
+    color: #00FF00;
+    text-align: justfy;
+    font-size: 20px;
+    background-color: #000033;
+}
+:valid:focus{
+    background-color: #F48FB1;
+}
+
+::placeholder {
     color: lightgrey;
     text-align: center;
-    font-size: 80px;
+    font-size: 18px;
 }
 
 #input {
@@ -55,38 +81,48 @@ input.placeholder {
     border-radius: 25px;
     margin-left: 200px;
 }
+#input:hover {
+    cursor: pointer;
+}
+#input:focus {
+    cursor: text;
+}
 
 #results-box {
     background-color: lightgrey;
-    width: 80%;
+    width: 78%;
     opacity: 0.5;
 }
 
 .searchbutton,
 .searchbutton2 {
-    width: 90px;
+    width: 130px;
     height: 40px;
     background-color: #000033;
     border: 1px solid #CCFF33;
     border-radius: 8px;
     color: antiquewhite;
-    display: inline-block;
-}
-searchbutton{
-    margin-left: 100px;
-
+    margin-right: 2px;
 }
 
-#play, #pause {
+
+.searchbar {
+    margin-top: 10px;
+}
+
+#play,
+#pause {
     width: 90px;
     height: 40px;
     bacground-color: #660033;
     border: 1px solid #66CCFF;
     border-radius: 8px;
     color: #0099FF;
+    margin-top: 3px;
 }
 
-#play:hover, #pause:hover {
+#play:hover,
+#pause:hover {
     cursor: pointer;
     background-color: #29B6F6;
     color: #FF6666;
